# consiliency-spec

./: CHANGELOG.md  LICENSE  NOTICE  README.md  consiliency-spec.public-manifest.json  package.json  pyproject.toml
.github/workflows/: consiliency-spec-ci.yml  publish.yml
canon/: README.md  SPEC.md
canon/bindings/pyo3/: README.md
canon/bindings/wasm/: README.md
canon/conformance/: check.sh  check_dabi_cabi.sh  check_published_canon_core.sh  check_xg4_canon_core.sh  emit_published_npm.mjs  emit_published_py.py  emit_pyo3.py  emit_wasm.mjs  engine_boundary_vectors.json  test_ingest_nfc.py  test_unicode_skew.py  wasm_surrogate_finding.mjs
canon/core/: Cargo.toml  cbindgen.toml
canon/core/include/: canon_core.h
canon/core/scripts/: check_cabi_smoke.sh
canon/core/src/: c_abi.rs  lib.rs
canon/core/tests/: c_abi_smoke.c  parity.rs
canon/py/: canon.py  canon_ingest.py  requirements.txt  test_canon.py
canon/ts/: canon.test.ts  canon.ts
canon/vectors/: canon-vectors.json  gov-cross-repo-canon-vectors.PROVENANCE.md  gov-cross-repo-canon-vectors.json
consiliency_spec/: __init__.py
idmodel/correspondence/: schema.json
scripts/consiliency-spec/: check_release.sh
spec-engine/authority/: authority-event.schema.json
spec-graph/schema/: spec-graph.schema.json
spec-parity/: SEMANTICS.md  kind-alignment.json  permitted-freedom-vocab.json
spec-parity/conformance/: check.sh  check_xg0_envelope.sh
spec-parity/schemas/: certificate.schema.json  kind-alignment.schema.json  permitted-freedom-vocab.schema.json  portal-payload.schema.json  result-state.schema.json  waiver.schema.json
